📜 .xlsx file conversion

--- a/weather_prediction.ipynb
+++ b/weather_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reading the csv file as a pandas DataFrame \n",
-    "weather_data = pd.read_csv(\"weather.csv\")"
+    "data = pd.read_csv(\"seattle-weather.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,12 @@
    ],
    "source": [
     "# exploring the saved data's details \n",
-    "weather_data.info()"
+    "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -93,19 +93,19 @@
        "(1461, 6)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# checking the no. of rows & no. of columns\n",
-    "weather_data.shape"
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -259,19 +259,19 @@
        "[1461 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# showcasing the actual data\n",
-    "weather_data"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -292,19 +292,19 @@
        "Name: count, Length: 79, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# counting the unique values in the 'wind' column\n",
-    "weather_data.wind.value_counts()"
+    "data.wind.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -325,19 +325,19 @@
        "Name: count, Length: 67, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# counting the unique values in the 'temp_max' column\n",
-    "weather_data.temp_max.value_counts()"
+    "data.temp_max.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -402,19 +402,19 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# counting the unique values in the 'temp_min' column\n",
-    "weather_data.temp_min.value_counts()"
+    "data.temp_min.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,12 +429,12 @@
     "}\n",
     "\n",
     "# renaming the columns \n",
-    "weather_data.rename(new_cols_dict, axis=1, inplace=True)"
+    "data.rename(new_cols_dict, axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -588,13 +588,23 @@
        "[1461 rows x 6 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weather_data"
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting final csv file into excel file for further data visualization.\n",
+    "data.to_excel('weather_prediction.xlsx', sheet_name='Data')"
    ]
   },
   {
@@ -621,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
