--- a/weather_prediction.ipynb
+++ b/weather_prediction.ipynb
@@ -1,15 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing Libraries :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing libraries \n",
     "import pandas as pd\n",
     "import zipfile\n",
     "import kaggle "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Downloading dataset from kaggle using the Kaggle API :"
    ]
   },
   {
@@ -26,8 +39,14 @@
     }
    ],
    "source": [
-    "# downloading dataset from kaggle using the Kaggle API\n",
     "!kaggle datasets download -d ananthr1/weather-prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracting the file from the already downloaded zip file :"
    ]
   },
   {
@@ -36,10 +55,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extracting the file from the already downloaded zip file\n",
     "zipfile_name = \"weather-prediction.zip\"\n",
     "with zipfile.ZipFile(zipfile_name, 'r') as file :\n",
     "    file.extractall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading the csv file as a pandas DataFrame :"
    ]
   },
   {
@@ -48,8 +73,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reading the csv file as a pandas DataFrame \n",
     "data = pd.read_csv(\"seattle-weather.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring the saved data's details : "
    ]
   },
   {
@@ -78,8 +109,14 @@
     }
    ],
    "source": [
-    "# exploring the saved data's details \n",
     "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking the no. of rows & no. of columns :"
    ]
   },
   {
@@ -99,8 +136,14 @@
     }
    ],
    "source": [
-    "# checking the no. of rows & no. of columns\n",
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Showcasing the actual data :"
    ]
   },
   {
@@ -265,8 +308,14 @@
     }
    ],
    "source": [
-    "# showcasing the actual data\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Counting the unique values in the 'wind' column :"
    ]
   },
   {
@@ -298,8 +347,14 @@
     }
    ],
    "source": [
-    "# counting the unique values in the 'wind' column\n",
     "data.wind.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Counting the unique values in the 'temp_max' column :"
    ]
   },
   {
@@ -331,8 +386,14 @@
     }
    ],
    "source": [
-    "# counting the unique values in the 'temp_max' column\n",
     "data.temp_max.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Counting the unique values in the 'temp_min' column :"
    ]
   },
   {
@@ -408,8 +469,14 @@
     }
    ],
    "source": [
-    "# counting the unique values in the 'temp_min' column\n",
     "data.temp_min.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Customizing the column names as per the need :"
    ]
   },
   {
@@ -418,7 +485,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# customizing the column names as per the need \n",
     "new_cols_dict = {\n",
     "    'date':'Date',\n",
     "    'precipitation':'Precipitation',\n",
@@ -598,12 +664,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting final csv file into excel file for further data visualization :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Converting final csv file into excel file for further data visualization.\n",
     "data.to_excel('weather_prediction.xlsx', sheet_name='Data')"
    ]
   },
